[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A short description of your project."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12.3"
alembic = "^1.13.3"
bleach = "^6.1.0"
blinker = "^1.8.2"
click = "^8.1.7"
dominate = "^2.9.1"
flask = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
flask-httpauth = "^4.8.0"
flask-login = "^0.6.3"
flask-mail = "^0.10.0"
flask-migrate = "^4.0.7"
flask-moment = "^1.0.6"
flask-pagedown = "^0.4.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
html5lib = "^1.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
mako = "^1.3.6"
markdown = "^3.7"
markupsafe = "^3.0.2"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-editor = "^1.0.4"
six = "^1.16.0"
sqlalchemy = "^2.0.36"
visitor = "^0.1.3"
webencodings = "^0.5.1"
werkzeug = "^3.0.4"
wtforms = "^3.2.1"
flask-sslify = "^0.1.5"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
